# pkg/serve/controller/comment/dto/comment.go
@@ -3,6 +3,8 @@
 // 创建时间：2025-05-10
 package dto
 
+import "jank.com/jank_blog/pkg/enums"
+
 // CreateCommentRequest 创建评论请求
 // @Param content     body string  true  "评论内容"
 // @Param post_id     body int64   true  "文章ID"
@@ -29,4 +31,22 @@ type GetCommentGraphRequest struct {
 // @Param id path int64 true "评论ID"
 type GetOneCommentRequest struct {
 	ID int64 `json:"id,string" xml:"id,string" form:"id,string" query:"id" validate:"required"`
+}
+
+// GetPendingCommentsRequest 获取评论请求
+// @Param page      query int false "页码"
+// @Param page_size query int false "每页数量"
+type GetPendingCommentsRequest struct {
+	Page     int `json:"page" xml:"page" form:"page" query:"page" validate:"omitempty,min=1"`
+	PageSize int `json:"page_size" xml:"page_size" form:"page_size" query:"page_size" validate:"omitempty,min=1,max=100"`
+}
+
+// UpdateAuditStatusRequest 更新评论审核状态请求
+// @Param id path int64 true "评论ID"
+// @Param audit_status body enums.AuditStatus true "审核状态"
+// @Param audit_reason body string false "审核不通过原因"
+type UpdateAuditStatusRequest struct {
+	ID          int64             `json:"id,string" xml:"id,string" form:"id,string" query:"id,string" validate:"required"`
+	AuditStatus enums.AuditStatus `json:"audit_status" xml:"audit_status" form:"audit_status" query:"audit_status" validate:"required,auditStatus"`
+	AuditReason string            `json:"audit_reason" xml:"audit_reason" form:"audit_reason" query:"audit_reason" validate:"omitempty,max=255"` // 审核不通过原因
 }
